# PraxisOpenCV

./: Ausführen.cmd  CMakeLists.txt  Fertig.cmd  README.md  config.hpp.in  main.cpp
mediapipe/mediapipe/examples/desktop/: demo_run_graph_main.cc
mediapipe/mediapipe/examples/desktop/BivaProject/: BUILD  config.hpp  main.cpp
mediapipe/mediapipe/examples/desktop/hello_world/: hello_world.cc
mediapipe/mediapipe/graphs/hand_tracking/: BUILD  hand_tracking_desktop_live.pbtxt
